<?xml version="1.0"?>
<package format="2">
  <name>eqvio</name>
  <version>2.0.0</version>
  <description>Equivariant VIO</description>

  <maintainer email="jerel.nielsen@hayden.ai">Jerel Nielsen</maintainer>

  <license>TODO</license>

  <author email="jerel.nielsen@hayden.ai">Jerel Nielsen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
