<?xml version="1.0"?>
<package format="2">
  <name>eqvio</name>
  <version>2.0.0</version>
  <description>Equivariant VIO</description>

  <maintainer email="jerel.nielsen@hayden.ai">Jerel Nielsen</maintainer>

  <license>TODO</license>

  <author email="jerel.nielsen@hayden.ai">Jerel Nielsen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>GIFT</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>GIFT</exec_depend>

  <export>
  </export>
</package>
